<resources>
    <string name="app_name">FakeCallGenerator</string>

    <string name="title_activity_calling">CallingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="contact">Mom</string>
    <string name="phone_nmber">1 858-543-5343</string>

    <!-- Main UI String-->
    <string name="setting_repeat_text">Repeat Times</string>
    <string name="setting_delay_text">Delay Seconds</string>
    <string name="setting_interval_text">Interval Between Repeats</string>
    <string name="hint_search">Search Contacts</string>
    <string name="search_button">Search</string>
    <string name="call_button">place the call</string>
    <string name="setting_unit">s</string>

    <string-array name="delay_array">
        <item>0</item>
        <item>10</item>
        <item>30</item>
        <item>180</item>
    </string-array>

    <string-array name="repeat_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="interval_array">
        <item>10</item>
        <item>30</item>
        <item>180</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
